# united-journal

./: README.md  go.mod  go.sum  main.go  manage.py
alchemy/: checklists.go  schema.go
backend/: .env  pyproject.toml
backend/src/backend/: __init__.py  config.py  factory.py  settings.py
backend/src/backend/blueprints/crm/: forms.py  populate.py  queries.py  routes.py
backend/src/backend/blueprints/crm/templates/crm/: customers.html  home.html
backend/src/backend/blueprints/orders/: views.py
backend/src/backend/blueprints/purchasing/: views.py
backend/src/backend/blueprints/purchasing/templates/purchasing/: purchasing.html  vendors.html
backend/src/backend/blueprints/sales/: views.py
backend/src/backend/blueprints/sales/templates/sales/: home.html
backend/src/backend/blueprints/users/: forms.py  queries.py  views.py
backend/src/backend/blueprints/users/templates/users/: base.html  login.html  register_customer.html  register_vendor.html
backend/src/backend/models/: models.py  plan.txt  queries.py  schema.py
backend/src/backend/models/tests/: customers.py  order_types.py  populate.py  util.py  warehouses.py
backend/src/backend/routes/: crm.py
backend/src/backend/utils/: feed.py
backend/src/instance/: testing.db
handler/: handler.go  template.go
instance/: testing.db
obsidian-united/: What is United-Journal?.md  __README__.md
obsidian-united/.obsidian/: workspace.json
obsidian-united/pricing/: Pricing Buckets.md
server/: config.py  factory.py  settings.py
server/models/: example.txt  models.py  (+3 more)
templates/: index.html
(+11 files in other folders)
